@@ -1,7 +1,9 @@
 procps-3.1.9 --> procps-3.1.10
 
+handle GPLONLY_ symbols                       #143549 #188374
 kill: better man page
 skill: better man page
+ps: PID-like columns change width as needed
 top: COMMAND instead of Command
 vmstat: -m displays slabinfo
 vmstat: -d displays disk stats
